# sperr-rs

./: .gitmodules  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
search.desc/sperr/: sperr-desc-0-.js
search.desc/sperr_sys/: sperr_sys-desc-0-.js
sperr/: all.html  enum.CompressionMode.html  enum.Error.html  fn.compress_2d.html  fn.compress_3d.html  fn.decompress_into_2d.html  fn.decompress_into_3d.html  index.html  sidebar-items.js  trait.Element.html
sperr-sys/: Cargo.toml  README.md  build.rs  wrapper.hpp
sperr-sys/src/: lib.rs
sperr_sys/: all.html  fn.free_dst.html  fn.sperr_comp_2d.html  fn.sperr_comp_3d.html  fn.sperr_decomp_2d.html  fn.sperr_decomp_3d.html  fn.sperr_parse_header.html  fn.sperr_trunc_3d.html  index.html  sidebar-items.js
sperr_sys/bindings/root/: fn.free_dst.html
sperr_sys/bindings/root/C_API/: fn.sperr_comp_2d.html  fn.sperr_comp_3d.html  fn.sperr_decomp_2d.html  fn.sperr_decomp_3d.html  fn.sperr_parse_header.html  fn.sperr_trunc_3d.html
src/: lib.rs
src/sperr/: lib.rs.html
src/sperr_sys/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/sperr/: trait.Element.js
